<!--
  ~ Copyright 2015 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/PlacesNameLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3sp"
                android:paddingEnd="3sp"
                android:textColor="#FFFF0000"
                android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/PriceCheck"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/priceCheck"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:id="@+id/OnlineShopping"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/onlineShopping"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:id="@+id/MyAccount"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/myAccount"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.2"
            android:orientation="vertical">

        <TextView
                android:id="@+id/OffersListLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3sp"
                android:paddingEnd="3sp"
                android:text="@string/offers"/>

        <ListView
                android:id="@+id/OffersList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.45"
            android:orientation="vertical">

        <TextView
                android:id="@+id/RecommendationListLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3sp"
                android:paddingEnd="3sp"
                android:text="@string/recommendations"/>

        <ListView
                android:id="@+id/RecommendationsList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>